src/test/deca/context/valid/test_class/getter_boolean.deca
// Description:
//    Minimalistic counter.
// Results:
//    true
//
// History:
//    Created on 16/01/2025

class A {
    boolean x = true ;
    boolean getX() {
        return x ;
    }
    
}

{
    A a = new A() ;

    println(a.getX()) ;
}
