src/test/deca/context/invalid/test_class/selection_argument_not_exist.deca
// Description:
//    Unit Test selection 
// Results:
//    none
//
// History:
//    Created on 16/01/2025


class A {
    int x = 10;
}

{
    A a = new A();
    println(a.y); // Erreur : y n'existe pas dans la classe A
}